# docs/swagger.yaml
@@ -86,6 +86,8 @@ definitions:
         type: array
       name:
         type: string
+      owner:
+        $ref: '#/definitions/models.ShortUser'
       owner_id:
         type: string
       participants:
@@ -120,6 +122,22 @@ definitions:
       invitations:
         items:
           $ref: '#/definitions/models.Invitation'
+        type: array
+    type: object
+  data.GetRecommendationsRequest:
+    properties:
+      context:
+        type: string
+      craving:
+        type: integer
+      mood:
+        type: string
+    type: object
+  data.GetRecommendationsResponse:
+    properties:
+      reccomendations:
+        items:
+          type: string
         type: array
     type: object
   data.GetSessionByIDResponse:
@@ -268,6 +286,8 @@ definitions:
         type: array
       name:
         type: string
+      owner:
+        $ref: '#/definitions/models.ShortUser'
       owner_id:
         type: string
       participants:
@@ -362,6 +382,28 @@ info:
   title: Swagger Example API
   version: "1.0"
 paths:
+  /ai-assistant/recommendations:
+    post:
+      consumes:
+      - application/json
+      description: Get recommendations
+      parameters:
+      - description: Recommendations object that needs to be created
+        in: body
+        name: recommendations
+        required: true
+        schema:
+          $ref: '#/definitions/data.GetRecommendationsRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/data.GetRecommendationsResponse'
+      summary: Get recommendations
+      tags:
+      - ai-assistant
   /challenges:
     get:
       consumes:
